# DataAnalysisMethods

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-dev-tools.sh
.github/workflows/: documentation.yml
analytics/data/lab/: lab1.csv
analytics/data/processed/: usdtrub1h.csv
analytics/notebooks/: big_databases_lab3_2.ipynb  big_databases_lab4_1.ipynb  exam.ipynb  lab1.ipynb  lab2.ipynb  lab2_polars.ipynb  lab2usdt.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  ml_lab2.ipynb  ml_lab3.ipynb  ml_lab4a.ipynb  ml_lab4b.ipynb  ml_lab4c.ipynb  web_lab1.ipynb  web_lab2.ipynb  web_lab3.ipynb  web_lab4.ipynb  web_lab5.ipynb
analytics/src/data/: __init__.py
analytics/src/lab2/: __init__.py
config/: logging_config.ini
docs/: BDB.rst  DAM.rst  IWA.rst  ML.rst  Makefile  conf.py  index.rst  make.bat
lab-data/: lab1.csv
modules/ml/: __init__.py  a.py  b.py  c.py
modules/stalking/: __init__.py  __main__.py  mapping.py  relations.py
modules/steam/: __main__.py
modules/steam/steam/: items.py  pipelines.py  settings.py
modules/steam/steam/spiders/: __init__.py
modules/tfidf/: __init__.py  __main__.py
modules/vkapi/: __init__.py  __main__.py
modules/widgets/vr-widget/src/: decs.d.ts  vrwidget.tsx
notebooks/: foo.ipynb  lab1.ipynb
src/lab1/: __init__.py
