[tool.poetry]
name = "data-analysis-methods"
version = "0.1.0"
description = "Labs"
authors = ["Roman Grigoryev <hjklvfr@list.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
sphinx = "^7.2.6"
coverage = "^7.4.1"
flake8 = "^7.0.0"
python-dotenv = ">=0.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.docs.dependencies]
myst-nb = "^1.0.0"
sphinx = "^7.2.6"
sphinx-book-theme = "^1.1.0"
myst-parser = "^2.0.0"
sphinx-design = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
