[project]
name = "data-analysis-methods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.12.1",
    "asyncio>=3.4.3",
    "click>=8.1.7",
    "coverage>=7.6.1",
    "dotenv>=0.9.9",
    "flake8>=7.1.1",
    "grequests>=0.7.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.2.5",
    "mapply>=0.1.26",
    "matplotlib>=3.9.2",
    "neo4j>=5.27.0",
    "notebook>=7.2.2",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "plotly>=5.24.1",
    "py2neo>=2021.2.4",
    "pymongo>=4.10.1",
    "pymorphy2>=0.9.1",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "redis>=5.2.1",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "scrapy>=2.12.0",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "sfrancia>=1.0.8",
    "shapely>=2.0.6",
    "sphinx>=7.4.7",
    "statsmodels>=0.14.2",
    "tensorflow[and-cuda]>=2.19.0",
    "tqdm>=4.66.5",
    "xgboost-cpu>=3.0.2",
]

[dependency-groups]
docs = [
    "myst-nb>=1.2.0",
    "myst-parser>=4.0.1",
    "sphinx>=7.4.7",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
]
